# master-ahmed

./: README.md
Big Project/: CMakeLists.txt
Big Project/apps/: analyzeECG.cpp  awesome_application.cpp  heron.cpp  mainb.cpp  mainm.cpp
Big Project/include/: arrays.hpp  dna.hpp  ecg.hpp  int_dlinkedlist.hpp  int_linkedlist.hpp  mathematics.hpp  member1ll.hpp  member2ll.hpp  member3ll.hpp  member4ll.hpp  member5ll.hpp  member6ll.hpp
